add routes for getting information about user and updating this information, and add function for checking if user provided at least one field to update

--- a/src/public/views/verification.email.handlebars
+++ b/src/public/views/verification.email.handlebars
@@ -53,7 +53,7 @@
                                                 ><a
                                                         href='{{link}}'
                                                         target='_blank'
-                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;'
+                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
                                                     >Confirm now</a></p>
                                                 <p
                                                     style='padding-bottom: 16px'
