--- a/src/public/views/reset.email.handlebars
+++ b/src/public/views/reset.email.handlebars
@@ -55,7 +55,7 @@
                                                 ><a
                                                         href='{{link}}'
                                                         target='_blank'
-                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;'
+                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
                                                     >Reset your password</a></p>
                                                 <p
                                                     style='padding-bottom: 16px'
