add route for creating conversation

--- a/src/views/emails/change.email.handlebars
+++ b/src/views/emails/change.email.handlebars
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Please activate your account</title>
+        <title>Your email address was changed</title>
         <!--[if mso]><style type="text/css">body, table, td, a { font-family: Arial, Helvetica, sans-serif !important; }</style><![endif]-->
     </head>
 
     <body
-        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #ffffff;'
+        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #fff;'
     >
         <table
             role='presentation'
@@ -32,8 +32,8 @@
                                                 style='padding-bottom: 20px;'
                                             ><img
                                                     src='https://e7.pngegg.com/pngimages/521/161/png-clipart-online-chat-rocket-chat-facebook-messenger-software-as-a-service-computer-software-rocket-template-text-online-chat.png'
-                                                    alt='Company'
-                                                    style='width: 80px;'
+                                                    alt='Company logo'
+                                                    style='width: 56px;'
                                                 /></div>
                                         </div>
                                         <div
@@ -42,27 +42,28 @@
                                             <div
                                                 style='color: rgb(0, 0, 0); text-align: left;'
                                             >
-                                                <h1 style='margin: 1rem 0'>Final
-                                                    step...</h1>
+                                                <h1 style='margin: 1rem 0'>New
+                                                    email address?</h1>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >Follow this link to verify your
-                                                    email address.</p>
+                                                >Your sign-in email address for
+                                                    Chatoron was changed to
+                                                    {{newEmail}}.</p>
+                                                <p
+                                                    style='padding-bottom: 16px'
+                                                >If you didn’t ask to change
+                                                    your email, follow this link
+                                                    to reset your sign-in email.</p>
                                                 <p
                                                     style='padding-bottom: 16px'
                                                 ><a
                                                         href='{{link}}'
                                                         target='_blank'
-                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
-                                                    >Confirm now</a></p>
+                                                        style='padding: 12px 24px; border-radius: 4px; color: #fff; background: #2b52f5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
+                                                    >Secure your account</a></p>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >If you didn’t ask to verify
-                                                    this address, you can ignore
-                                                    this email.</p>
-                                                <p
-                                                    style='padding-bottom: 16px'
-                                                >Thanks,<br />The Chato team</p>
+                                                >Thanks,<br />The Chatoron team</p>
                                             </div>
                                         </div>
                                         <div
