--- a/src/views/emails/welcome.email.handlebars
+++ b/src/views/emails/welcome.email.handlebars
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Reset your password</title>
+        <title>Welcome to Mailmeteor</title>
         <!--[if mso]><style type="text/css">body, table, td, a { font-family: Arial, Helvetica, sans-serif !important; }</style><![endif]-->
     </head>
 
     <body
-        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #ffffff;'
+        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #fff;'
     >
         <table
             role='presentation'
@@ -32,7 +32,7 @@
                                                 style='padding-bottom: 20px;'
                                             ><img
                                                     src='https://e7.pngegg.com/pngimages/521/161/png-clipart-online-chat-rocket-chat-facebook-messenger-software-as-a-service-computer-software-rocket-template-text-online-chat.png'
-                                                    alt='Company'
+                                                    alt='Company logo'
                                                     style='width: 56px;'
                                                 /></div>
                                         </div>
@@ -44,27 +44,35 @@
                                             >
                                                 <h1
                                                     style='margin: 1rem 0'
-                                                >Trouble signing in?</h1>
+                                                >Welcome to Chatoron</h1>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >We've received a request to
-                                                    reset the password for this
-                                                    user account.</p>
+                                                >Hello {{firstName}},</p>
+                                                <p
+                                                    style='padding-bottom: 16px'
+                                                >Thank you for signing up to
+                                                    Chatoron. We're really happy
+                                                    to have you onboard! Click
+                                                    the link below to login to
+                                                    your account:</p>
                                                 <p
                                                     style='padding-bottom: 16px'
                                                 ><a
                                                         href='{{link}}'
                                                         target='_blank'
-                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
-                                                    >Reset your password</a></p>
+                                                        style='padding: 12px 24px; border-radius: 4px; color: #fff; background: #2b52f5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
+                                                    >Login to your account</a></p>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >If you didn't ask to reset your
-                                                    password, you can ignore
-                                                    this email.</p>
+                                                >Best regards,</p>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >Thanks,<br />The Chato team</p>
+                                                >Sally Ride<br /><span
+                                                        style='color: #999'
+                                                    >CEO and Founder</span><br
+                                                    /><span
+                                                        style='color: #999'
+                                                    >The Chatoron team</span></p>
                                             </div>
                                         </div>
                                         <div
