--- a/src/views/emails/verification.email.handlebars
+++ b/src/views/emails/verification.email.handlebars
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Welcome to Mailmeteor</title>
+        <title>Please activate your account</title>
         <!--[if mso]><style type="text/css">body, table, td, a { font-family: Arial, Helvetica, sans-serif !important; }</style><![endif]-->
     </head>
 
     <body
-        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #ffffff;'
+        style='font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 0px; background-color: #fff;'
     >
         <table
             role='presentation'
@@ -32,8 +32,8 @@
                                                 style='padding-bottom: 20px;'
                                             ><img
                                                     src='https://e7.pngegg.com/pngimages/521/161/png-clipart-online-chat-rocket-chat-facebook-messenger-software-as-a-service-computer-software-rocket-template-text-online-chat.png'
-                                                    alt='Company'
-                                                    style='width: 56px;'
+                                                    alt='Company logo'
+                                                    style='width: 80px;'
                                                 /></div>
                                         </div>
                                         <div
@@ -43,36 +43,27 @@
                                                 style='color: rgb(0, 0, 0); text-align: left;'
                                             >
                                                 <h1
-                                                    style='margin: 1rem 0'
-                                                >Welcome to Chato</h1>
+                                                    style='margin: 1rem 0px'
+                                                >Final step...</h1>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >Hello {{firstName}},</p>
-                                                <p
-                                                    style='padding-bottom: 16px'
-                                                >Thank you for signing up to
-                                                    Mailmeteor. We're really
-                                                    happy to have you onboard!
-                                                    Click the link below to
-                                                    login to your account:</p>
+                                                >Follow this link to verify your
+                                                    email address.</p>
                                                 <p
                                                     style='padding-bottom: 16px'
                                                 ><a
                                                         href='{{link}}'
                                                         target='_blank'
-                                                        style='padding: 12px 24px; border-radius: 4px; color: #FFF; background: #2B52F5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
-                                                    >Login to your account</a></p>
+                                                        style='padding: 12px 24px; border-radius: 4px; color: #fff; background: #2b52f5;display: inline-block;margin: 0.5rem 0;text-decoration: none;'
+                                                    >Confirm now</a></p>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >Best regards,</p>
+                                                >If you didn’t ask to verify
+                                                    this address, you can ignore
+                                                    this email.</p>
                                                 <p
                                                     style='padding-bottom: 16px'
-                                                >Sally Ride<br /><span
-                                                        style='color: #999'
-                                                    >CEO and Founder</span><br
-                                                    /><span
-                                                        style='color: #999'
-                                                    >The Chato team</span></p>
+                                                >Thanks,<br />The Chatoron team</p>
                                             </div>
                                         </div>
                                         <div
